About text align fix

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -223,7 +223,7 @@
 .about-section p{
   font-size: 21px;
   color: #fff !important;
-  text-align: center;
+  text-align: left;
   max-width: 100%;
 }
 
